# Snake

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  compile.bat
src/: Snake.cpp  Snake.hpp
